investigating cluster crashes